# learn_opengl

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  render.h  shader_utils.h
src/: camera.c  main.c  render.c  shader_utils.c
src/shaders/: vertex.glsl
